--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
 	<groupId>com.simon-transporte</groupId>
 	<artifactId>simon-suite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<!-- 
+		nice goals:
+		mvn openjpa:sql ->  ./target/database.sql
+		mvn openjpa:enhance
+		
+	-->
 
 	<properties>
 		<java.version>21</java.version>
@@ -18,6 +25,25 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.openjpa</groupId>
+				<artifactId>openjpa-maven-plugin</artifactId>
+				<version>4.0.0</version>
+				<configuration>
+					<includes>**/db/pojo/*.class</includes>
+					<addDefaultConstructor>true</addDefaultConstructor>
+					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>enhancer</id>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>enhance</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
