--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<groupId>com.simon-transporte</groupId>
 	<artifactId>simon-suite</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<!-- 
 		nice goals:
 		mvn openjpa:sql ->  ./target/database.sql
 		mvn openjpa:enhance
-		
+		mvn antrun:run@deploy-php
 	-->
 
 	<properties>
@@ -18,6 +18,8 @@
 		<jetty.version>11.0.22</jetty.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<php.src.path>src/main/php/</php.src.path>
+		<php.server.path>/var/www/html/simon</php.server.path>
 	</properties>
 
 	<build>
@@ -42,6 +44,26 @@
 						<goals>
 							<goal>enhance</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>deploy-php</id>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<copy todir="${php.server.path}">
+									<fileset dir="${php.src.path}" />
+								</copy>
+							</target>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
